# SuFu

./: .gitignore  CMakeLists.txt  README.md  install
dsl/: CMakeLists.txt
dsl/autolifter/: autolifter_dad_dataset.cpp  autolifter_dataset.cpp  autolifter_dsl.cpp  autolifter_lazy_tag_dataset.cpp  autolifter_lsp_dataset.cpp  autolifter_semantics.cpp
dsl/clia/: clia_dsl.cpp
dsl/component/: component_dataset.cpp  component_dsl.cpp  component_extra_semantics.cpp
dsl/deepcoder/: deepcoder_dsl.cpp
dsl/samplesy/: samplesy_dsl.cpp  samplesy_semantics.cpp  samplesy_witness.cpp
executor/: CMakeLists.txt  run_autolifter.cpp  run_cbs_icse10.cpp  run_incre.cpp  run_incre_grisette.cpp  run_incre_label.cpp  run_question_selection.cpp  run_splitor.cpp  run_status.cpp  run_sygus.cpp  test.cpp
executor/invoker/: autolifter_invoker.cpp  cbs_invoker.cpp  eusolver_invoker.cpp  external_invoker.cpp  invoker.cpp  maxflash_invoker.cpp  multithread.cpp  obe_invoker.cpp  vsa_invoker.cpp
ext/: CMakeLists.txt
ext/composed_semantics/: composed_rule.cpp  composed_semantics.cpp  composed_witness.cpp  composed_z3_semantics.cpp  witness_value_join_op.cpp
ext/deepcoder/: anonymous_function.cpp  data_example_sampler.cpp  data_type.cpp  data_util.cpp  data_value.cpp  deepcoder_semantics.cpp  deepcoder_type_system.cpp  tmp_info.cpp
ext/gurobi/: gurobi_extension.cpp  gurobi_verifier.cpp
ext/limited_type/: limited_ds.cpp  limited_int.cpp  limited_type.cpp
ext/vsa/: model.json  top_down_model.cpp  vsa.cpp  vsa_extension.cpp  vsa_inside_checker.cpp  witness.cpp  witness_manager.cpp  witness_value.cpp
ext/z3/: z3_example_space.cpp  z3_extension.cpp  z3_semantics.cpp  z3_semantics_manager.cpp  z3_verifier.cpp
incre/: CMakeLists.txt  incre_solver.cpp
incre/analysis/: incre_align_type.cpp  incre_default_generator.cpp  incre_eliminate_unbounded_create.cpp  incre_env_collector.cpp  incre_instru_info.cpp  incre_instru_runtime.cpp  incre_instru_type.cpp  incre_label_compress.cpp
incre/autolabel/: CMakeLists.txt  incre_autolabel_basic.cpp
incre/autolabel/solver/: incre_autolabel_constraint_align_collector.cpp  incre_autolabel_constraint_solver.cpp
incre/autolifter/: incre_autolifter_solver.cpp  incre_aux_semantics.cpp  incre_plp.cpp  incre_plp_solver.cpp
incre/autolifter/nonscalar/: incre_nonscalar_autolifter.cpp  incre_nonscalar_comb.cpp  incre_nonscalar_ds_solver.cpp  incre_nonscalar_oc_solver.cpp
incre/grammar/: incre_source_component_collector.cpp
incre/io/: incre_from_json.cpp  incre_printer.cpp  incre_to_haskell.cpp
incre/language/: incre_aux_semantics.cpp  incre_clear_compress.cpp  incre_lookup.cpp  incre_pattern.cpp  incre_type.cpp  incre_value.cpp
selector/: CMakeLists.txt  random_selector.cpp  selector.cpp
selector/baseline/: biased_bitvector_selector.cpp  clia_random_selector.cpp  significant-input.cpp
selector/baseline/significant-input/: 11440431.s  11604909.s  12948338.s  17212077.s  19274448.s  19558979.s  2171308.s  23435880.s  25239569.s  28627624_1.s  30732554.s  31753108.s  33619752.s  34801680.s  35016216.s  35744094.s  36462127.s  37281007.s  37534494.s  38664547.s  38871714.s  39060015.s  40498040.s  41503046.s  43120683.s  43606446.s  44789427.s  add-a-line-break-with-a-formula.s  bikes-long-repeat.s  bikes-long.s  bikes.s  bikes_small.s  cell-contains-all-of-many-things.s  cell-contains-number.s  cell-contains-one-of-many-things.s  cell-contains-one-of-many-with-exclusions.s  cell-contains-some-words-but-not-others.s  cell-contains-specific-text.s  cell-equals-one-of-many-things.s  change-negative-numbers-to-positive.s  (+169 more)
selector/random/: cached_random_semantics_scorer.cpp  complete_random_semantics_selector.cpp  different_pair_learned_scorer.cpp  equivalence_checker_tool.cpp  grammar_flatter.cpp  learned_random_semantics_scorer.cpp  optimized_different_pair_learned_score.cpp  optimized_triple_scorer.cpp  pair_learned_scorer.cpp  program_adaptor.cpp  random_semantics_model.cpp  random_semantics_scorer.cpp  random_semantics_scorer_tester.cpp  random_semantics_selector.cpp  random_sementics_scorer_cache.cpp  same_pair_learned_selector.cpp  triple_learned_scorer.cpp
selector/samplesy/: different_program_generator.cpp  finite_equivalence_checker.cpp  samplesy.cpp  vsa_seed_generator.cpp  z3_equivalence_checker.cpp
selector/split/: finite_splitor.cpp  split_selector.cpp  splitor.cpp  z3_splitor.cpp
solver/: CMakeLists.txt
solver/autolifter/: CMakeLists.txt  autolifter.cpp  sf_verifier.cpp
solver/autolifter/basic/: lifting_problem.cpp  occam_verifier.cpp  streamed_example_space.cpp
solver/component/: component_based_solver.cpp  grammar_encoder.cpp  linear_encoder.cpp  tree_encoder.cpp
solver/enum/: enum_util.cpp
solver/maxflash/: maxflash.cpp  maxflash_vsa.cpp  topdown_context_graph.cpp
solver/polygen/: dnf_learner.cpp  polygen_cegis.cpp  polygen_condition_solver.cpp  polygen_staged_cegis.cpp  polygen_term_solver.cpp
solver/stun/: stun.cpp
solver/tmp/: batched_maxflash.cpp  weighted_obe.cpp
solver/vsa/: vsa_builder.cpp  vsa_solver.cpp
src/: CMakeLists.txt
src/basic/: CMakeLists.txt  config.cpp  env.cpp  example_sampler.cpp  grammar.cpp  program.cpp  semantics.cpp  type.cpp  value.cpp
src/cmake/: FindJsoncpp.cmake  FindLIBPROFILER.cmake
src/executor/: CMakeLists.txt  run_incre_label.cpp
src/executor/invoker/: obe_invoker.cpp  polygen_invoker.cpp
src/ext/deepcoder/: higher_order_operator.cpp
src/incre/: CMakeLists.txt
src/incre/autolifter/: incre_autolifter_comb_solver.cpp  (+1 more)
src/runner/: sketch.json  synduce.json
src/solver/: CMakeLists.txt  iterative_solver.cpp  solver.cpp
src/surface/: .depend  Makefile  core.cmi  core.cmo  core.ml  core.mli  f  fileutil.cmi  fileutil.cmo  fileutil.ml  fileutil.mli  json.cmi  json.cmo  json.ml  json.mli  lexer.cmi  lexer.cmo  lexer.ml  lexer.mll  main.cmi  main.cmo  main.ml  parser.cmi  parser.cmo  parser.ml  parser.mli  parser.mly  parser.output  support.cmi  support.cmo  syntax.cmi  syntax.cmo  syntax.ml  syntax.mli
src/sygus/: CMakeLists.txt  sygus.cpp
sygus/theory/: CMakeLists.txt
(+2601 files in other folders)
